--- a/app/page.mdx
+++ b/app/page.mdx
@@ -1,5 +1,8 @@
 ---
-title: "Page 1"
+type: posts
+title: My Blog
 ---
 
-# Why Protestants Convert
+# My Blog
+
+Welcome to my blog! Here you'll find all my latest posts.
