--- a/app/prayer/page.mdx
+++ b/app/prayer/page.mdx
@@ -12,7 +12,7 @@ and if we are being honest, not really for budgetary reasons). That morning, I w
 to my first Orthodox Divine Liturgy.
 
 We're dealing with two different religions here. And so let's take a look at
-what the crucial difference that's causing all of these conversions and subsequent
+what the crucial difference is that's causing all of these conversions and subsequent
 New York Post articles.
 
 Is it the smells and bells? Sure. Yeah. But that's not really the heart of the issue.
