--- a/app/prayer/page.mdx
+++ b/app/prayer/page.mdx
@@ -38,7 +38,7 @@ with no purpose or anything.
 
 The broader point here is that young men want to be put to work. They want a goal,
 and they want concrete steps to achieve that goal. That's why they're all playing
-vidya so much. That's why they used to ask girls out. Et cetera.
+video games. That's why they used to ask girls out. Et cetera.
 
 In closing, prots' last hope is probably the 1928 BCP. Otherwise the young men are
 going rosary or Jesus Prayer.
