--- a/app/prot-dog-car/page.mdx
+++ b/app/prot-dog-car/page.mdx
@@ -19,7 +19,7 @@ the core thing involved in Christianity.
 You have basically two definitions floating around:
 
 1) The Evangelical-Protestant Gospel: Man deserves eternal hell due to his sin.
-   A penal substition on the cross atoned for this sin. So now one's cosmic
+   A penal substitution on the cross atoned for this sin. So now one's cosmic
    account balance is zero.
 
 2) The Orthodox-Catholic Gospel: Prior to the arrival of Jesus of Nazareth, the
