--- a/app/indulgences/page.mdx
+++ b/app/indulgences/page.mdx
@@ -24,7 +24,7 @@ discussed in my previous post, [Protestantism and the Dog That Caught the Car Pr
 
 Let's take a step back. What was the Reformation about?
 
-The answer you normally get is that the Reformation is about *sola fide*,
+The answer you normally get is that the Reformation was about *sola fide*,
 justification by faith alone.
 
 Ok.
