--- a/app/indulgences/page.mdx
+++ b/app/indulgences/page.mdx
@@ -53,8 +53,8 @@ Who is moving arbitrary cosmic ledgers and making Christianity a legal exercise?
 In the medieval indulgences paradigm, there is this extrinsic punishment ledger,
 known as temporal punishment, that the Christian is constantly trying to get reduced.
 
-So there's a gaping whole in the aforementioned Roman narrative. And, to return to
-what the Reformation was about, importantly, this gaping whole was, at least in
+So there's a gaping hole in the aforementioned Roman narrative. And, to return to
+what the Reformation was about, importantly, this gaping hole was, at least in
 chronological terms, *the catalyst for the Reformation*!
 
 # Some Closing Thoughts
