--- a/app/indulgences/page.mdx
+++ b/app/indulgences/page.mdx
@@ -57,7 +57,7 @@ So there's a gaping hole in the aforementioned Roman narrative. And, to return t
 what the Reformation was about, importantly, this gaping hole was, at least in
 chronological terms, *the catalyst for the Reformation*!
 
-# Some Closing Thoughts
+## Some Closing Thoughts
 
 1) The key to understanding the state of things in late medieval Christianity,
    and Fr. Luther's insight about them, and the point at which the whole message
