christian men dating 2

--- a/app/christian-men-dating/page.mdx
+++ b/app/christian-men-dating/page.mdx
@@ -8,10 +8,10 @@ underperform their secular peers in the dating market.
 
 1. **Investment Incentives**
 
-    A secular man's sexual reward for investing in his dating life (looks, money,
-    status, game) is shorter-term, likelier to happen with a given woman, and
-    comes at much lower cost in terms of commitment. Therefore, a secular man has
-    a higher incentive to invest in his dating life.
+    A secular man's sexual reward for investing in his dating life is shorter-term,
+    likelier to happen with a given woman, and comes at much lower cost in terms of
+    commitment. Therefore, a secular man has a higher incentive to invest in his dating
+    life.
 
 2. **Selection Effects**
 
@@ -31,4 +31,4 @@ underperform their secular peers in the dating market.
 4. **Early Marriage**
 
     The churches encourage men to marry young and thereby to "sell" well below
-    their peak dating value, which for a man is often in his mid-30s.
+    their peak dating market value, which for a man is often in his mid-30s.
